export default {
  lastVideosTabTitle: 'Accueil',
  lastVideosHeaderTitle: 'Dernières vidéos',
  feelingsTabTitle: 'Boîte des émotions',
  feelingsHeaderTitle: 'Boîte des émotions',
  membersTabTitle: 'Membres',
  membersHeaderTitle: 'Membres',
};
